Moved the PUT request.
